--- a/res/drawable/text_stroke.xml
+++ b/res/drawable/text_stroke.xml
@@ -3,6 +3,8 @@
 
     <stroke
         android:width="1px"
-        android:color="#E5E6E6" />
-<solid android:color="@color/write"/>
+        android:color="#A9A9A9" />
+
+    <solid android:color="@color/write" />
+
 </shape>
