--- a/res/layout/activity_yue_lu_add.xml
+++ b/res/layout/activity_yue_lu_add.xml
@@ -78,6 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
             android:layout_marginRight="15dp"
+            android:padding="10dp"
             android:text="12"
             android:textColor="@color/main_text"
             android:textSize="12sp" />
