--- a/res/layout/activity_yue_lu_share_it.xml
+++ b/res/layout/activity_yue_lu_share_it.xml
@@ -9,9 +9,9 @@
         android:id="@+id/share_it_title_bar"
         layout="@layout/title_navigation_bar" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="186.3dp"
         android:background="@color/write"
         android:orientation="vertical" >
 
@@ -20,25 +20,26 @@
         <EditText
             android:id="@+id/share_it_edit_ider"
             android:layout_width="fill_parent"
-            android:layout_height="60dp"
+            android:layout_height="73dp"
             android:background="@null"
             android:gravity="top"
             android:hint="@string/idea"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="5dp"
-            android:textSize="11sp" />
+            android:textSize="12sp" />
         <!-- 添加图片 -->
 
         <RelativeLayout
             android:id="@+id/share_it_relation_add"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_below="@id/share_it_edit_ider" >
 
             <RelativeLayout
                 android:id="@+id/share_it_view_add"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="53dp"
+                android:layout_height="53dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
@@ -47,15 +48,15 @@
 
                 <View
                     android:layout_width="1px"
-                    android:layout_height="20dp"
+                    android:layout_height="27dp"
                     android:layout_centerInParent="true"
-                    android:background="#D2D4D4" />
+                    android:background="#A9A9A9" />
 
                 <View
-                    android:layout_width="20dp"
+                    android:layout_width="27dp"
                     android:layout_height="1px"
                     android:layout_centerInParent="true"
-                    android:background="#D2D4D4" />
+                    android:background="#A9A9A9" />
             </RelativeLayout>
 
             <TextView
@@ -65,13 +66,14 @@
                 android:layout_toEndOf="@id/share_it_view_add"
                 android:layout_toRightOf="@id/share_it_view_add"
                 android:text="@string/add_picture"
-                android:textColor="@color/main_text"
+                android:textColor="#A9A9A9"
                 android:textSize="12sp" />
         </RelativeLayout>
 
         <View
             android:layout_width="fill_parent"
             android:layout_height="1px"
+            android:layout_below="@id/share_it_relation_add"
             android:layout_marginTop="10dp"
             android:background="#D9DBDC" />
         <!-- 所在位置 -->
@@ -80,6 +82,7 @@
             android:id="@+id/share_it_linear_position"
             android:layout_width="fill_parent"
             android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
             android:background="@color/write"
             android:gravity="center_vertical"
             android:orientation="horizontal" >
@@ -100,18 +103,18 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/position"
-                android:textColor="@color/main_text"
-                android:textSize="13sp" />
+                android:textColor="#666666"
+                android:textSize="14sp" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginEnd="11dp"
+                android:layout_marginRight="11dp"
                 android:contentDescription="@drawable/right_arrow_icon"
                 android:src="@drawable/right_arrow_icon" />
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 
     <!-- 谁可以看 -->
 
@@ -140,14 +143,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/who_can_see"
-            android:textColor="@color/main_text"
-            android:textSize="13sp" />
+            android:textColor="#666666"
+            android:textSize="14sp" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="11dp"
+            android:layout_marginRight="11dp"
             android:contentDescription="@drawable/right_arrow_icon"
             android:src="@drawable/right_arrow_icon" />
     </LinearLayout>
@@ -182,14 +185,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/see_who_remind"
-            android:textColor="@color/main_text"
-            android:textSize="13sp" />
+            android:textColor="#666666"
+            android:textSize="14sp" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="11dp"
+            android:layout_marginRight="11dp"
             android:contentDescription="@drawable/right_arrow_icon"
             android:src="@drawable/right_arrow_icon" />
     </LinearLayout>
