--- a/res/layout/list_dynamic.xml
+++ b/res/layout/list_dynamic.xml
@@ -108,14 +108,15 @@
 
         <ImageView
             android:id="@+id/list_dynamic_image_share_it"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="53dp"
-            android:layout_marginRight="53dp"
+            android:layout_marginLeft="38dp"
+            android:layout_marginRight="38dp"
             android:contentDescription="@drawable/forwarding_gray"
+            android:padding="15dp"
             android:src="@drawable/forwarding_gray" />
 
         <!-- 留言 -->
@@ -124,9 +125,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="90dp"
-            android:layout_marginRight="90dp"
-            android:orientation="horizontal" >
+            android:layout_marginLeft="75dp"
+            android:layout_marginRight="75dp"
+            android:orientation="horizontal"
+            android:padding="15dp" >
 
             <ImageView
                 android:id="@+id/list_dynamic_image_leave_a_message"
@@ -153,11 +155,12 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="53dp"
-            android:layout_marginLeft="90dp"
-            android:layout_marginRight="53dp"
-            android:layout_marginStart="90dp"
-            android:orientation="horizontal" >
+            android:layout_marginEnd="38dp"
+            android:layout_marginLeft="75dp"
+            android:layout_marginRight="38dp"
+            android:layout_marginStart="75dp"
+            android:orientation="horizontal"
+            android:padding="15dp" >
 
             <ImageView
                 android:id="@+id/list_dynamic_image_like"
