--- a/res/layout/title_navigation_bar.xml
+++ b/res/layout/title_navigation_bar.xml
@@ -29,7 +29,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_navigation_bar_paddingtop"
         android:text="取消"
-        android:textColor="@color/write"
+        android:textColor="@drawable/text_while"
         android:textSize="12sp"
         android:visibility="gone" />
 
