--- a/res/layout/list_head_personal_post.xml
+++ b/res/layout/list_head_personal_post.xml
@@ -149,16 +149,21 @@
             android:textSize="12sp" />
         <!-- 点赞图标 -->
 
-        <ImageView
+        <CheckBox
             android:id="@+id/personal_post_image_zhan"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:contentDescription="@drawable/like_point_grey"
-            android:src="@drawable/like_point_grey" />
+            android:layout_width="35dp"
+            android:layout_height="25dp"
+        	android:padding="5dp"
+        	android:gravity="center_vertical"
+        	android:button="@null"
+        	android:drawableLeft="@drawable/like_number_selector"
+        	android:drawableStart="@drawable/like_number_selector"
+        	android:drawablePadding="3dp"
+        	android:text="1"
+        	android:textColor="@color/main_text"
+            android:textSize="12sp"/>
 
-        <TextView
+   <!--      <TextView
             android:id="@+id/personal_post_text_zhan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -167,7 +172,7 @@
             android:layout_marginRight="10dp"
             android:text="1"
             android:textColor="@color/main_text"
-            android:textSize="12sp" />
+            android:textSize="12sp" /> -->
     </LinearLayout>
 
 </LinearLayout>
