--- a/res/drawable/click_the_list_to_change_the_background_shape.xml
+++ b/res/drawable/click_the_list_to_change_the_background_shape.xml
@@ -3,13 +3,13 @@
 
     <item   android:state_focused="false" android:state_pressed="true">
         <shape android:shape="oval">
-            <stroke android:width="22dp" android:color="@color/yellow" />
+            <stroke   android:width="11dp" android:color="#85D3EF" />
             <solid android:color="@null"/>
         </shape>
     </item>
     <item   android:state_focused="false" android:state_pressed="false">
         <shape android:shape="oval">
-            <stroke android:width="22dp" android:color="@color/write" />
+            <stroke   android:width="11dp" android:color="@color/write" />
               <solid android:color="@null"/>
         </shape>
     </item>
