--- a/res/layout/list_main_post.xml
+++ b/res/layout/list_main_post.xml
@@ -12,33 +12,46 @@
 
         <!-- 头像 -->
 
-        <ImageView
-            android:id="@+id/list_main_image_head_tu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@drawable/meng_mei_head"
-            android:padding="10dp"
-            android:src="@drawable/meng_mei_head" />
+        <RelativeLayout
+            android:id="@+id/list_main_linear_head_tu"
+            android:layout_width="62dp"
+            android:layout_height="62dp" >
 
-        <ImageView
-            android:id="@+id/list_main_image_popular"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:contentDescription="@drawable/popular_icons"
-            android:src="@drawable/popular_icons"
-            android:visibility="gone" />
+            <ImageView
+                android:id="@+id/list_main_image_head_tu"
+                android:layout_width="43dp"
+                android:layout_height="43dp"
+                android:layout_centerInParent="true"
+                android:contentDescription="@drawable/meng_mei_head"
+                android:src="@drawable/meng_mei_head" />
+
+            <View
+                android:id="@+id/list_main_image_head_tu_view"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:background="@drawable/click_the_list_to_change_the_background_shape" />
+
+            <ImageView
+                android:id="@+id/list_main_image_popular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:contentDescription="@drawable/popular_icons"
+                android:src="@drawable/popular_icons"
+                android:visibility="gone" />
+        </RelativeLayout>
+
         <!-- 昵称 -->
 
         <TextView
             android:id="@+id/list_main_text_nick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_toEndOf="@id/list_main_image_head_tu"
-            android:layout_toRightOf="@id/list_main_image_head_tu"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@id/list_main_linear_head_tu"
+            android:layout_toRightOf="@id/list_main_linear_head_tu"
             android:text="@string/meng_mei"
             android:textColor="#5A5959"
             android:textSize="14sp" />
@@ -84,6 +97,7 @@
         android:layout_height="1px"
         android:layout_marginLeft="50dp"
         android:layout_marginStart="50dp"
+        android:layout_marginTop="5dp"
         android:background="@color/thread_gray" />
 
     <RelativeLayout
