--- a/res/layout/list_post_details.xml
+++ b/res/layout/list_post_details.xml
@@ -1,32 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
+    android:background="@color/write" >
 
     <View
         android:id="@+id/list_post_details_line_view"
         android:layout_width="fill_parent"
         android:layout_height="0.5px"
-       
         android:background="@color/line" />
-    <!-- 评论人头像 -->
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/list_post_details_line_view"
         android:layout_marginEnd="13dp"
-        android:layout_marginLeft="10dp"
         android:layout_marginRight="13dp"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp" >
 
-        <ImageView
-            android:id="@+id/list_post_details_image_head"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:contentDescription="@drawable/zhu_ge_wo_ai_ni_tu"
-            android:src="@drawable/zhu_ge_wo_ai_ni_tu" />
+        <!-- 评论人头像 -->
+
+        <RelativeLayout
+            android:id="@+id/list_post_details_linear_head"
+            android:layout_width="70dp"
+            android:layout_height="70dp" >
+
+            <ImageView
+                android:id="@+id/list_post_details_image_head"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_centerInParent="true"
+                android:contentDescription="@drawable/zhu_ge_wo_ai_ni_tu"
+                android:src="@drawable/log_ic" />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:background="@drawable/shape_main_head_white" />
+        </RelativeLayout>
 
         <!-- 评论人昵称 -->
 
@@ -34,12 +46,10 @@
             android:id="@+id/list_post_details_text_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@id/list_post_details_image_head"
-            android:layout_marginLeft="11dp"
-            android:layout_marginStart="11dp"
+            android:layout_alignTop="@id/list_post_details_linear_head"
             android:layout_marginTop="3dp"
-            android:layout_toEndOf="@id/list_post_details_image_head"
-            android:layout_toRightOf="@id/list_post_details_image_head"
+            android:layout_toEndOf="@id/list_post_details_linear_head"
+            android:layout_toRightOf="@id/list_post_details_linear_head"
             android:text="@string/meng_mei"
             android:textColor="@color/main_title_text"
             android:textSize="13sp" />
@@ -51,11 +61,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/list_post_details_text_name"
-            android:layout_marginLeft="11dp"
-            android:layout_marginStart="11dp"
             android:layout_marginTop="6dp"
-            android:layout_toEndOf="@id/list_post_details_image_head"
-            android:layout_toRightOf="@id/list_post_details_image_head"
+            android:layout_toEndOf="@id/list_post_details_linear_head"
+            android:layout_toRightOf="@id/list_post_details_linear_head"
             android:text="@string/list_time"
             android:textColor="@color/main_text"
             android:textSize="10sp" />
@@ -67,11 +75,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/list_post_details_text_time"
-            android:layout_marginLeft="11dp"
-            android:layout_marginStart="11dp"
             android:layout_marginTop="8dp"
-            android:layout_toEndOf="@id/list_post_details_image_head"
-            android:layout_toRightOf="@id/list_post_details_image_head"
+            android:layout_toEndOf="@id/list_post_details_linear_head"
+            android:layout_toRightOf="@id/list_post_details_linear_head"
             android:text="@string/carry_me_fly"
             android:textColor="@color/main_text"
             android:textSize="11sp" />
